syntax = "proto3";

option java_package="com.jsala.grpc.generated";

service buyer {
	rpc createUser(LoginArgs) returns (int);
	rpc login(LoginArgs) returns (sessionToken);
	rpc logout(SessionToken) returns (Empty);
	rpc getSellerRating(SellerId) returns (SellerRating);
	rpc searchItem(SearchItemPriceArgClientServer) returns (SearchItemResponse);
}

message LoginArgs {
	string username = 1;
	strnig password = 2;
}

message SessionToken {
	string sessionToken = 1;
}

message Empty {

}

message SellerId {
	int serllerId = 1;
}

message SellerRating {
	int positive = 1;
	int negative = 2;
}

message Keywords {
	repeated String keywords = 1;
}

message SearchItemPriceArgClientServer {
	SessionToken sessionToken = 1;
	int32 category = 2;
	Keywords keywords = 3;
}

message ItemIdGRPC {
	int32 category = 1;
	int32 serial = 1;
}

message SellerId {
	int32 sellerId = 1;
}

message ItemGRPC {
	string name = 1;
	ItemIdGRPC itemId = 2;
	Keywords keywords = 3;
	string condition = 4;
	float price = 5;
	SellerId sellerId = 6;
}
